2006-10-16  Dave Lehman  <dlehman@redhat.com>

	* src/system-config-kdump.py:
	fix parsing of crash settings from /proc/cmdline

2006-10-10  Dave Lehman  <dlehman@redhat.com>

	* src/system-config-kdump.py,src/system-config-kdump.glade:
	fix various bugs in writeDumpConfig and writeBootloaderConfig
	reflect pre-existing "ifc" and "default" lines in GUI on startup
	don't ever freeze the net interface checkbutton
	minor GUI tweaks
	